Fri Jun 13 02:42:39 1997  Nanbor Wang  <nw1@dingo.wolfpack.cs.wustl.edu>

	* jaws.{mdp,mak}: Updated to incoporate latest changes.

Thu Jun  5 14:13:22 1997  James C Hu  <jxh@lambada.cs.wustl.edu>

	* HTTP_Server.cpp: Added more informative comments to the
	  asynch_thread_pool() method due to comments posed by Mehul
	  (MehulM@spa-marketing.com).

Wed Jun  4 23:00:47 1997  James C Hu  <jxh@lambada.cs.wustl.edu>

	* JAWS_File.cpp (JAWS_File): Fixed a bug where JAWS_File wanted
	  the file to have write permissions before openning it.  This is
	  now only true if the file is to be written to.

Wed Jun  4 22:30:41 1997  Nanbor Wang  <nw1@dingo.wolfpack.cs.wustl.edu>

	* main.cpp (main): Changed SIGCLD to SIGCHLD for better
	  portability.

	* IO.cpp (transmit_file): The third argument passed
	  ACE_Asynch_Transmit_File::Header_And_Trailer() should be an
	  address (&).  

Mon Jun  2 16:35:18 1997  James C Hu  <jxh@lambada.cs.wustl.edu>

	* HTTP_Helpers.cpp: Serious bug in base64 decoder routine
 	  squashed.  Didn't initialize an array with 0's.  The original
 	  source had them declared static.  Also, changed sizeof alphabet_
 	  to strlen (alphabet_), because original code had alphabet_ as an
 	  array, but my translation has alphabet_ as a pointer.

	* HTTP_Response.cpp: Added some code to check to see if the
 	  decoder returns 0.  If it does, flag this as a failed
 	  authorization attempt.

	* HTTP_Handler.cpp: Added a "\r\n" to the confirmation message in
	  receive_file_complete () method.

	* HTTP_Request.cpp: In parse_request_line (), created conditional
	  expressions in the debugging print statement so that a null
	  string will not cause the server to crash.

	* HTTP_Response.cpp:
	  (1) cgi_resposnse () no longer has to wait for the process to
	  die.  The fix to ACE_Process of closing down child handles was
	  enough to get the connection to die on its own.
	  (2) Mike (mrm@cisco.com) pointed out that the output for CGI